--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/polytable
-    driver-class-name: org.mariadb.jdbc.Driver
-    username: polytable
-    password: 1234
+#    url: jdbc:mariadb://localhost:3306/polytable
+#    driver-class-name: org.mariadb.jdbc.Driver
+#    username: polytable
+#    password: 1234
 
   jpa:
     hibernate:
