--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,22 @@
 spring:
-  datasource:
+#  datasource:
 #    url: jdbc:mariadb://localhost:3306/polytable
 #    driver-class-name: org.mariadb.jdbc.Driver
 #    username: polytable
 #    password: 1234
+#
+#  redis:
+#    lettuce:
+#      pool:
+#        max-active: 10
+#        max-idle: 8
+#        min-idle: 2
+#    port: 6379
+#    host: 127.0.0.1
+#    password: 'redisAdmin'
+
+
+
 
   jpa:
     hibernate:
