Email 인증기능 추가 완료. Redis, smtp는 인증기능에서만 사용중으로 redisConfig만 죽여놓으면 가동하는데 문제 없을 듯 싶습니다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
 #    port: 6379
 #    host: 127.0.0.1
 #    password: 'redisAdmin'
-
+#
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -23,6 +23,15 @@ spring:
       hibernate:
         format_sql: true
 
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: zoodisx@gmail.com
+    password: enter your password
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
 
 jwt:
   header: Authorization
