Gmail SMTP 계정,비밀번호 제거 CertificationService 인증 완료시 redis 내부에 저장된 인증값 삭제처리.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,14 +24,14 @@ spring:
         format_sql: true
 
 
-  mail:
-    host: smtp.gmail.com
-    port: 587
-    username: zoodisx@gmail.com
-    password: enter your password
-    properties:
-      mail.smtp.auth: true
-      mail.smtp.starttls.enable: true
+#  mail:
+#    host: smtp.gmail.com
+#    port: 587
+#    username: enter your email
+#    password: enter your password
+#    properties:
+#      mail.smtp.auth: true
+#      mail.smtp.starttls.enable: true
 
 jwt:
   header: Authorization
