로그인이 필요한 test 메소드 처리 로그인이 필요한 test 메소드는 @WithUserDetails(value = "test") 어노테이션 붙혀서 사용하시면 됩니다.

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,10 @@ dependencies {
 	// mail
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+	// jackson local date/time binding
+	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.14.2'
+
+
 }
 
 tasks.named('test') {
